[metadata]
name = surforama
version = attr: surforama.__version__
description = a tool for using surfaces to explore volumetric data in napari
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/cellcanvas/surforama
author = Kyle Harrington
author_email = surforama@kyleharrington.com
license = MIT
license_file = LICENSE
license_files = LICENSE
classifiers =
    Development Status :: 2 - Pre-Alpha
    Framework :: napari
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Topic :: Scientific/Engineering :: Image Processing
project_urls =
    Bug Tracker = https://github.com/cellcanvas/surforama/issues
    Documentation = https://github.com/cellcanvas/surforama#README.md
    Source Code = https://github.com/cellcanvas/surforama
    User Support = https://github.com/cellcanvas/surforama/issues

[options]
packages = find:
install_requires =
    magicgui
    mrcfile
    numpy
    pooch
    qtpy
    rich
    scikit-image
    starfile
    trimesh
    typer
python_requires = >=3.8
include_package_data = True
package_dir =
    =src
setup_requires = setuptools_scm

[options.packages.find]
where = src

[options.entry_points]
console_scripts =
    surforama = surforama._cli:app
napari.manifest =
    surforama = surforama:napari.yaml

[options.extras_require]
dev =
    %(testing)s
    pre-commit
testing =
    napari
    pyqt5
    pytest
    pytest-cov
    pytest-qt
    tox
napari =
    napari[all]

[options.package_data]
* = *.yaml
